--- a/src/App.scss
+++ b/src/App.scss
@@ -78,7 +78,8 @@
                 font-size: 30px;
             }
 
-            h5 {
+            span {
+                font-weight:bold;
                 color: #4475F2 !important;
             }
 
