--- a/src/App.scss
+++ b/src/App.scss
@@ -138,6 +138,20 @@ $breakpoint-xl: 1536px;
     }
 }
 
+.drawer-search {
+    width: 90%;
+    border-radius: 5px;
+    padding: 10px;
+    border: 1px solid #E0E0E0;
+    outline: none;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+
+    &::placeholder {
+        color: #9A9EA6;
+        text-align: center;
+    }
+}
 
 .nav-down-wrapper {
     padding-top: 10px !important;
@@ -190,6 +204,20 @@ $breakpoint-xl: 1536px;
             color: white;
             border-radius: 50%;
         }
+    }
+}
+
+.photo-playback {
+    @include md {
+        width: 100%;
+        height: 100%;
+        margin-top: 72px;
+    }
+
+    @include sm {
+        margin-top: 50px;
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -369,6 +397,7 @@ $breakpoint-xl: 1536px;
 
 .fav-wrapper,
 .section-wrapper {
+
     h1 {
         font-weight: bold;
     }
@@ -391,6 +420,11 @@ $breakpoint-xl: 1536px;
             color: #4475F2 !important;
             font-weight: bold;
             padding-left: 30px !important;
+
+            @include md {
+
+                padding-left: 20px !important;
+            }
         }
     }
 
