--- a/src/App.scss
+++ b/src/App.scss
@@ -155,12 +155,9 @@ $breakpoint-xl: 1536px;
 
 .nav-down-wrapper {
     padding-top: 10px !important;
-    padding-left: 65px !important;
-    padding-right: 65px !important;
     background-color: #fff;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    gap: 80px;
 
     @include md {
         flex-direction: column;
@@ -184,7 +181,6 @@ $breakpoint-xl: 1536px;
         display: flex;
         flex-direction: row;
         gap: 10px;
-
 
         .person {
             padding: 12px !important;
@@ -301,7 +297,7 @@ svg.playback {
     align-items: center;
     justify-content: space-evenly;
     margin-top: 60px !important;
-    margin-bottom: 50px !important;
+    margin-bottom: 153px !important;
     min-height: 100px;
 
 
@@ -362,6 +358,7 @@ svg.playback {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
 
     @include md {
@@ -378,8 +375,10 @@ svg.playback {
 
     .sub-text {
         p {
+            position: relative;
             font-size: 17px;
             padding-left: 10px !important;
+            z-index: 780 !important;
 
             &.two {
                 color: #80918E;
@@ -391,28 +390,26 @@ svg.playback {
             }
         }
 
-
         width: 50%;
         position: absolute;
         bottom: 0;
         left: 0;
         right: 0;
-
-        @include md {
-            background: transparent;
-        }
-
-        @include sm {
-            width: 100%;
-            position: absolute;
-            bottom: 0;
-            left: 90px;
-            margin-top: 10px;
-        }
-
+        backdrop-filter: blur(1px);
         background-color: rgba(255, 255, 255, 0.7);
-        color: black;
-        border-radius: 0 6px 0 0;
+        border-radius: 0 6px 0;
+    }
+
+    @include md {
+        background: transparent;
+    }
+
+    @include sm {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        left: 90px;
+        margin-top: 10px;
     }
 }
 
@@ -432,8 +429,8 @@ svg.playback {
     flex-direction: column;
     justify-content: center;
     gap: 20px;
-    margin-top: 40px !important;
-    margin-bottom: 15px !important;
+    // margin-top: 40px !important;
+    // margin-bottom: 15px !important;
 
     @include md() {
         padding: 50px;
@@ -445,7 +442,7 @@ svg.playback {
             font-size: 18px;
             color: #4475F2 !important;
             font-weight: bold;
-            padding-left: 30px !important;
+            // padding-left: 30px !important;
 
             @include md {
 
@@ -473,6 +470,11 @@ svg.playback {
     }
 }
 
+.emoji-box {
+    width: 50px !important;
+    height: 50px !important;
+}
+
 .revers {
     max-width: 548px !important;
 }
@@ -484,4 +486,58 @@ svg.playback {
             height: 24px;
         }
     }
+}
+
+.gray-color {
+    color: rgba(154, 158, 166, 1);
+    font-weight: 400;
+}
+
+.my-25 {
+    margin-bottom: 25px;
+    margin-top: 25px;
+}
+
+.emoji-box {
+    margin: 10px;
+    width: 50px !important;
+    height: 50px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 13px;
+    background-color: rgba(239, 224, 180, 1);
+    margin-right: 10px;
+}
+
+.gallery-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 37px;
+    margin-top: 54px !important;
+}
+
+.fav-sec {
+    margin-bottom: 88px !important;
+}
+
+.reserv-section-wrapper {
+    margin-bottom: 135px !important;
+}
+
+.map-section-wrapper {
+    margin-bottom: 153px !important;
+}
+
+.gallery-section-wrapper {
+    margin-bottom: 201px !important;
+}
+
+.comments-section-wrapper {
+    gap: 87px;
+    margin-bottom: 201px !important;
+}
+
+.qfa {
+    margin-bottom: 201px !important;
 }
