--- a/src/App.scss
+++ b/src/App.scss
@@ -65,6 +65,8 @@ $breakpoint-xl: 1536px;
 
     .Search {
         .search-input {
+            padding-left: 40px !important;
+            padding-right: 10px !important;
             width: 530px;
             height: 48px;
             border-radius: 30px;
@@ -74,16 +76,37 @@ $breakpoint-xl: 1536px;
             position: relative;
 
             &::placeholder {
+                font-size: 16px;
                 color: #9A9EA6;
-                padding: 40px;
+                padding: 0px;
+            }
+
+            .search-input:focus::placeholder {
+                color: transparent;
+                /* OR */
+                opacity: 0;
+                /* OR */
+                display: none;
             }
         }
 
         .search-icon {
             position: absolute;
-            top: 50%;
+            width: 16px;
+            height: 16px;
+            top: 36%;
             left: 20px;
             color: #9A9EA6;
+        }
+
+        /* When search is active */
+        .search-input:focus~.search-icon {
+            display: none;
+        }
+
+        /* OR if you want to handle click events */
+        .search-input:active~.search-icon {
+            display: none;
         }
     }
 
@@ -91,7 +114,7 @@ $breakpoint-xl: 1536px;
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 0px !important;
+        // gap: 6px !important;
 
         svg {
             color: #9A9EA6;
@@ -105,11 +128,20 @@ $breakpoint-xl: 1536px;
         gap: 10px;
 
         svg {
+
+
             color: #4475F2;
-            background-color: #E3EBFD;
-            border-radius: 50%;
-            padding: 2px !important;
-            margin: 5px;
+
+            &.location-icon {
+
+
+                background-color: #E3EBFD;
+                border-radius: 50%;
+                padding: 2px !important;
+                padding-bottom: 8px !important;
+                padding-top: 8px !important;
+                margin: 5px;
+            }
         }
 
 
@@ -214,6 +246,7 @@ svg.location-icon {
     justify-content: center !important;
     text-align: center !important;
 
+
     path {
         translate: 10% 10%;
         scale: .8;
@@ -244,6 +277,20 @@ svg.playback {
         width: 100%;
         height: 100%;
     }
+
+}
+
+.circle-shadow {
+    content: "";
+    position: absolute;
+    top: 40%;
+    left: 35%;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    box-shadow: 1px 1px 100px 120px rgb(177, 198, 252);
+    opacity: .8;
+    z-index: -1;
 }
 
 .man-landing-photo {
@@ -287,9 +334,9 @@ svg.playback {
     flex-direction: row;
     gap: 10px;
     align-items: center;
+    margin-top: 34px !important;
 
     button {
-        margin: 10px !important;
         padding: 0 10px !important;
     }
 }
@@ -363,6 +410,14 @@ svg.playback {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    box-shadow: 0px 1.07px 4.94px 0px #81818104;
+    box-shadow: 0px 2.48px 11.48px 0px #81818108;
+    box-shadow: 0px 4.45px 20.61px 0px #8181810B;
+    box-shadow: 0px 7.39px 34.2px 0px #8181810E;
+    box-shadow: 0px 12.17px 56.35px 0px #81818111;
+    box-shadow: 0px 21.27px 98.48px 0px #81818115;
+    box-shadow: 0px 46px 213px 0px #8181811F;
+
 
 
     @include md {
@@ -433,8 +488,7 @@ svg.playback {
     flex-direction: column;
     justify-content: center;
     gap: 20px;
-    // margin-top: 40px !important;
-    // margin-bottom: 15px !important;
+
 
     @include md() {
         padding: 50px;
@@ -446,7 +500,6 @@ svg.playback {
             font-size: 18px;
             color: #4475F2 !important;
             font-weight: bold;
-            // padding-left: 30px !important;
 
             @include md {
 
@@ -540,8 +593,68 @@ svg.playback {
 .comments-section-wrapper {
     gap: 87px;
     margin-bottom: 201px !important;
+    box-shadow: 0px 2.77px 2.21px 0px rgba(191, 191, 191, 0.0197) !important;
+
+    box-shadow: 0px 6.65px 5.32px 0px rgba(191, 191, 191, 0.0283) !important;
+
+    box-shadow: 0px 12.52px 10.02px 0px rgba(191, 191, 191, 0.035) !important;
+
+    box-shadow: 0px 22.34px 17.87px 0px rgba(191, 191, 191, 0.0417) !important;
+
+    box-shadow: 0px 41.78px 33.42px 0px rgba(191, 191, 191, 0.0503) !important;
+
+    box-shadow: 0px 100px 80px 0px rgba(191, 191, 191, 0.07) !important;
+
 }
 
 .qfa {
     margin-bottom: 201px !important;
+}
+
+.css-cv1eik-MuiPaper-root-MuiAccordion-root:last-of-type {
+    border-bottom-left-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+
+}
+
+.css-cv1eik-MuiPaper-root-MuiAccordion-root:first-of-type {
+    border-top-left-radius: 0px !important;
+    border-top-right-radius: 0px !important;
+}
+
+.collapses {
+    margin-top: 88px !important;
+}
+
+.comment-card {
+    box-shadow: 0px 2.77px 2.21px 0px rgba(0, 0, 0, 0.0197);
+
+    box-shadow: 0px 6.65px 5.32px 0px rgba(0, 0, 0, 0.0283);
+
+    box-shadow: 0px 12.52px 10.02px 0px rgba(0, 0, 0, 0.035);
+
+    box-shadow: 0px 22.34px 17.87px 0px rgba(0, 0, 0, 0.0417);
+
+    box-shadow: 0px 41.78px 33.42px 0px rgba(0, 0, 0, 0.0503);
+
+    box-shadow: 0px 100px 80px 0px rgba(0, 0, 0, 0.07);
+
+}
+
+.social {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    width: 660px !important;
+    gap: 40px;
+}
+
+.one {
+    gap: 24px;
+}
+
+.gap-16 {
+    display: flex;
+    flex-direction: column;
+    gap: 16px !important;
 }
