--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,10 @@
     font-family: "Plus Jakarta Sans", sans-serif !important;
 }
 
+h1 {
+    font-size: 42px;
+}
+
 body {
     display: flex;
     justify-content: center;
